# diplom_credit_scoring

./: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  init.sql  load_bureau.py  pyproject.toml  requirements.txt
models/: first_stage.py  second_stage.py
models/first_best/: best_model_catboost.joblib  summary_catboost.json
models/second_best/: best_model_xgboost.joblib  summary_xgboost.json
research/chapter1/: algo_research.ipynb
research/chapter2/: eda_add_data.ipynb  eda_app.ipynb
src/: feature_importance.py
src/backend/: main.py
src/frontend/: app.py
